--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,10 @@
     <name>SkiStationProject</name>
     <description>SkiStationProject</description>
     <properties>
-        <java.version>1.8</java.version>
+
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+
     </properties>
     <dependencies>
            
